add visual indicators for jvm, jicofo and jigasi services